# fpmas-sir

./: .gitignore  CMakeLists.txt  show.py
argtable3/: CMakeLists.txt  CMakeLists.txt.in
fpmas-sir-analysis/: analysis.py  generate_test_data.py  perf.py  show.py
fpmas-sir-analysis/test_data/10000/3/ghost/16/395610/: time.out
fpmas-sir-analysis/test_data/10000/3/ghost/2/363943/: time.out
fpmas-sir-analysis/test_data/10000/3/ghost/32/333589/: time.out
fpmas-sir-analysis/test_data/10000/3/ghost/4/318963/: time.out
fpmas-sir-analysis/test_data/10000/3/ghost/8/337800/: time.out
fpmas-sir-analysis/test_data/10000/3/hard_sync/16/321222/: time.out
fpmas-sir-analysis/test_data/10000/3/hard_sync/2/318620/: time.out
fpmas-sir-analysis/test_data/10000/3/hard_sync/32/343353/: time.out
fpmas-sir-analysis/test_data/10000/3/hard_sync/4/320215/: time.out
fpmas-sir-analysis/test_data/10000/3/hard_sync/8/359256/: time.out
fpmas-sir-analysis/test_data/10000/4/ghost/16/319337/: time.out
fpmas-sir-analysis/test_data/10000/4/ghost/2/376907/: time.out
fpmas-sir-analysis/test_data/10000/4/ghost/32/391923/: time.out
fpmas-sir-analysis/test_data/10000/4/ghost/4/350278/: time.out
fpmas-sir-analysis/test_data/10000/4/ghost/8/361213/: time.out
fpmas-sir-analysis/test_data/10000/4/hard_sync/16/339027/: time.out
fpmas-sir-analysis/test_data/10000/4/hard_sync/2/372831/: time.out
fpmas-sir-analysis/test_data/10000/4/hard_sync/32/360403/: time.out
fpmas-sir-analysis/test_data/10000/4/hard_sync/4/398249/: time.out
fpmas-sir-analysis/test_data/10000/4/hard_sync/8/379240/: time.out
fpmas-sir-analysis/test_data/10000/6/ghost/16/342106/: time.out
fpmas-sir-analysis/test_data/10000/6/ghost/2/386656/: time.out
fpmas-sir-analysis/test_data/10000/6/ghost/32/320427/: time.out
fpmas-sir-analysis/test_data/10000/6/ghost/4/342813/: time.out
fpmas-sir-analysis/test_data/10000/6/ghost/8/389261/: time.out
fpmas-sir-analysis/test_data/10000/6/hard_sync/16/333910/: time.out
fpmas-sir-analysis/test_data/10000/6/hard_sync/2/361423/: time.out
fpmas-sir-analysis/test_data/10000/6/hard_sync/32/376475/: time.out
fpmas-sir-analysis/test_data/10000/6/hard_sync/4/349599/: time.out
fpmas-sir-analysis/test_data/10000/6/hard_sync/8/375004/: time.out
fpmas-sir-analysis/test_data/100000/3/ghost/16/333155/: time.out
fpmas-sir-analysis/test_data/100000/3/ghost/2/307644/: time.out
fpmas-sir-analysis/test_data/100000/3/ghost/32/387590/: time.out
fpmas-sir-analysis/test_data/100000/3/ghost/4/376874/: time.out
fpmas-sir-analysis/test_data/100000/3/ghost/8/353179/: time.out
fpmas-sir-analysis/test_data/100000/3/hard_sync/16/320059/: time.out
fpmas-sir-analysis/test_data/100000/3/hard_sync/2/390899/: time.out
fpmas-sir-analysis/test_data/100000/3/hard_sync/32/360314/: time.out
fpmas-sir-analysis/test_data/100000/3/hard_sync/4/366188/: time.out
fpmas-sir-analysis/test_data/100000/3/hard_sync/8/341120/: time.out
fpmas-sir-analysis/test_data/100000/4/ghost/16/332586/: time.out
fpmas-sir-analysis/test_data/100000/4/ghost/2/382484/: time.out
fpmas-sir-analysis/test_data/100000/4/ghost/32/330994/: time.out
fpmas-sir-analysis/test_data/100000/4/ghost/4/343632/: time.out
fpmas-sir-analysis/test_data/100000/4/ghost/8/322950/: time.out
macropop/: CMakeLists.txt  cli.cpp  cli.h  config.h  macropop.cpp  macropop.h  main.cpp  output.cpp  output.h
micropop/: CMakeLists.txt  main.cpp  micropop.cpp  micropop.h  output.cpp  output.h
(+15 files in other folders)
